Config updates after new jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-auto: true
 title: Again With This?
 source: ./src
 destination: ./public
 permalink: none
-exclude: [scss]
+exclude: [css/scss]
 future: false
